@startuml

class FactorGraph

class VariableNode
class FactorNode

class Variable
enum FactorKind

class VariableId
class FactorId

FactorGraph o-- VariableNode
FactorGraph o-- FactorNode

VariableNode *-- Variable
VariableNode ..> FactorId

FactorNode *-- FactorKind
FactorNode ..> VariableId

@enduml